--- a/css/opening.css
+++ b/css/opening.css
@@ -1,1 +1,5 @@
-h2{color:red;}
+#opening{
+	background-image: url('../images/tahoe-lake-background.jpg');
+	background-size:cover;
+	height: 1000px;
+}
