--- a/css/opening.css
+++ b/css/opening.css
@@ -1,5 +1,60 @@
-#opening{
-	background-image: url('../images/tahoe-lake-background.jpg');
-	background-size:cover;
-	height: 1000px;
+#opening .container-fluid:first-child {
+    padding: 0; /*bootstrap override*/
+}
+
+.covers {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh; /* TODO set the height using jquery */
+    z-index: 5;
+    margin-bottom: 50px;
+}
+
+#cover-title-1 {
+    position: absolute;
+    z-index: 4;
+    left: 35%;
+    bottom: 38%;
+    width: 510px;
+    border: 0;
+    border-bottom: 1px solid white;
+    padding-top: 10px;
+    color: white;
+    z-index: 10;
+}
+
+#cover-title-1 h1 {
+    margin-bottom: 30px;
+    font-size: 96px;
+    line-height: 98px;
+    font-weight: 200;
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0,0,0,.8);
+    font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
+    font-family: "Sorts Mill Goudy", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    z-index: 10;
+}
+
+.vimeo {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 2;
 }
