--- a/css/opening.css
+++ b/css/opening.css
@@ -21,12 +21,12 @@
 #cover-title-1 {
     position: absolute;
     z-index: 4;
-    left: 35%;
-    bottom: 38%;
-    width: 510px;
+    display:inline-block;
+    text-align: center;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
     border: 0;
-    border-bottom: 1px solid white;
-    padding-top: 10px;
     color: white;
     z-index: 10;
 }
@@ -45,16 +45,23 @@
 }
 
 .vimeo {
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 2;
 }
+
+.vimeo iframe{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+}
+
+.videocover{
+    width:100%;
+    height:100%;
+}
+
