--- a/css/forest.css
+++ b/css/forest.css
@@ -11,7 +11,7 @@ video.cover{height:auto;width:100%;}}*/
 	width:100%;
 }
 
-h2{
+#forest-container h2{
 	position: relative;
 	font-family: 'Oswald', sans-serif;
 	font-style:bold;
@@ -19,17 +19,17 @@ h2{
 	color: red;
 	z-index: 100;
 	}
-h3{
+#forest-container h3{
 	font-family: 'Oswald', sans-serif;
 	font-size:30px;
 	color: red;
 	z-index: 100;
 }
-h3.subhead{
+#forest-container h3.subhead{
 	font-size:25px;
 	color:black;
 }
-p {
+#forest-container p {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
 	line-height: 24px;
